syntax = 'proto3';

package HOSComs;

message Params{
    sint32 n1 = 1;
    sint32 n2 = 2;
    sint32 m = 3;
    sint32 p1 = 4;
    sint32 p2 = 5;
    string err = 6;
    sint32 rf_dealias = 7;
    float toler = 8;
    sint32 n = 9;
    float ta = 10;
    float xlen = 11;
    float ylen = 12;
    float t_stop = 13;
    float f_out = 14;
    int32 tecplot = 15;
    int32 i_case = 16;
    float depth = 17;
    float grav = 18;
    int32 i_out_dim = 19;
    sint32 i_3d = 20;
    sint32 i_a_3d = 21;
    sint32 i_2d = 22;
    sint32 i_prob = 23;
    int32 i_sw = 24;
    float gamma = 25;
    float beta = 26;
    float tp_real = 27;
    float hs_real = 28;
    sint32 i_ana = 29;
    sint32 i_card = 30;
    sint32 i_zvect = 31;
    float t_start = 32;
    float x_min = 33;
    float x_max = 34;
    float y_min = 35;
    float y_max = 36;
    float z_min = 37;
    float z_max = 38;
    float l = 39;
    float t = 40;
    int32 t_interp = 41;
    int32 i_out_post = 42;
    string address_brokerHOS = 43;
    int32 i_hdf = 44;
    int32 qsize_max = 45;
}

message Flow{
    //we may change sint64 to sint32 as python consider them as "long"
    sint64 vitx = 1;
    sint64 vity = 2;
    sint64 vitz = 3;
    sint64 phit = 4;
    sint64 dudt = 5;
    sint64 dvdt = 6;
    sint64 dwdt = 7;
    sint64 dpress = 8;
}

enum Flag{
    START = 0;
    LAUNCHER = 1;
    MODES = 2;
    POST = 3;
    RUN = 4;
    EXIT = 5;
    GET_FLOW = 6;
    WAIT = 7;
    RESULT  = 8;
    GET_SURF = 9;
    GET_SURF_MAP =10;
    PARAM = 11;
    SND_PARAM = 12;
    OFF = 13;
    POSTPROC = 14;
    PARAM_GET = 15;
    TIME = 16;
    PROC_STATUS_MODES = 17;
    PROC_STATUS_LAUNCHER = 18;
    PROC_STATUS_POST = 19;
    RESTART_POST = 20;
    RESTART_LAUNCHER = 21;
    RESTART_MODES = 22;
    RESTART_POSTPROC = 23;
    KILL = 24;
    KILL_LAUNCHER = 25;
    KILL_MODES = 26;
    KILL_POSTPROC = 27;
    CLOSE_SERVER = 28;

}


enum Data{
    DONE = 0;
    WAIT_PARAM = 1;
    RECONSTRUCT = 2;
}


message CmdMessage{
    string flagval = 1;
}


message StatMessage{
    string flagval = 1;
    string stat = 2;

}


message GetMessage{
    string flagval = 1;
    float time = 2;
    repeated float pts = 3;
    int32 vector_size = 4;
}


message ParamMessage{
    string flagval = 1;
    Params param = 2;
}


message FlowMessage{
    string flagval = 1;
    Flow flow = 2;
}


message DataMessage{
    string flagval = 1;
    string value = 2;
    Params param = 3;
    bool boolval = 4;
    ModeStat modestat = 5;
    LauncherStat launcherstat = 6;
    PostProcessStat ppstat = 7;
    repeated float returnvalues = 8;
}

message ModeStat{
    string stat = 1;
    float t0 = 2;
    float tn = 3;
    sint64 size = 4;
    sint64 HDF5 = 5;
    string path = 6;
}


message LauncherStat{
    string stat = 1;
}


message PostProcessStat{
    string stat = 1;
    float tm = 2;
    float tp = 3;
}
